--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
+    "start": "node index",
+    "heroku-postbuild": "cd front-end && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.2",
     "nodemon": "^2.0.12"
+  },
+  "engine":{
+    "node": "14.x",
+    "npm" : "7.x"
   }
 }
