--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,7 +20,7 @@
     "mongoose": "^6.0.2",
     "nodemon": "^2.0.12"
   },
-  "engine":{
+  "engines":{
     "node": "14.x",
     "npm" : "7.x"
   }
