--- a/front-end/package.json
+++ b/front-end/package.json
@@ -41,5 +41,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/api"
+  "proxy": "http://localhost:5000/api",
+  "engines": {
+    "node": "14.x",
+    "npm": "7.x"
+  }
 }
